# capitaliq-xpressfeed-dbmanager

./: README.md  pyproject.toml
data/ref/: dataitem_info.csv  fundamental.json
src/capitaliq_xpressfeed_dbmanager/: __init__.py  db_task_manager.py  postgres_database.py
src/utils/: run_queries.py
tests/: test_import.py
